spdht_src = files([
  'util.cpp',
  'Log.cpp',
  'bencode_offset.cpp',
  'dht.cpp',
  'udp.cpp',
  'client.cpp',
  'private_interface.cpp',
  'tcp.cpp',
  'upnp_service.cpp',
  'timeout.cpp',
  'Options.cpp',
  'ip_election.cpp',
  'db.cpp',
  'net_util.cpp',
  'krpc.cpp',
  'bencode_print.cpp',
  'dstack.cpp',
  'module.cpp',
  'cache.cpp',
  'transaction.cpp',
  'upnp.cpp',
  'search.cpp',
  'dht_interface.cpp',
  'dump.cpp',
  'bencode.cpp',
  'shared.cpp',
  'bootstrap.cpp',
  'encode_bencode.cpp',
  'decode_bencode.cpp',
  'priv_decode_bencode.cpp',
  'priv_encode_bencode.cpp',
  'priv_krpc.cpp',
  'krpc_parse.cpp',
  'core.cpp',
  'routing_table.cpp',
  'scrape.cpp',
  'spbt_scrape_client.cpp',
])

